# copy_to_output

./: COPYRIGHT  Cargo.toml  LICENSE  LICENSE-MIT  README.md
example_files/: Cargo.toml.txt  build.rs.txt
src/: lib.rs
tests/: copy_path_tests.rs  copy_tests.rs
