[package]
name = "copy_to_output"
version = "2.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/prenwyn/copy_to_output"
description = """
A small rust library to copy files/folders from the project directory to the output directory
"""
keywords = ["gamedev", "cargo", "filesystem", "tools"]
categories = ["development-tools::build-utils", "filesystem", "game-development"]
include = ["src/", "example_files", "LICENSE-*", "README.md", "COPYRIGHT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fs_extra = "1.3"
